<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="vertical"--><!--tools:context=".MainActivity">-->

<!--<android.support.v7.widget.RecyclerView--><!--android:id="@+id/movieRecyclerView"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:scrollbars="vertical" />--><!----><!--</LinearLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/movieCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/movieImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="8dp"
                android:src="@drawable/aquaman"
                android:transitionName="imageTransition" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/movieImage"
                android:layout_toRightOf="@id/movieImage"
                android:padding="8dp"
                android:text="@string/aquaman"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#000"
                android:transitionName="titleTransition" />

            <TextView
                android:id="@+id/movieDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieTitle"
                android:layout_toRightOf="@id/movieImage"
                android:padding="8dp"
                android:text="@string/aquaman_desc"
                android:transitionName="descTransition" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.button.MaterialButton
        android:id="@+id/fragmentAnimationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieCard"
        android:layout_centerInParent="true"
        android:text="@string/fragment_animation" />
</RelativeLayout>